syntax = "proto3";

option csharp_namespace = "Northwind.Grpc.Service";

import "Protos/decimal.proto";

package product;

service Product {
  rpc GetProduct (ProductRequest) returns (ProductReply);
  rpc GetProducts (ProductsRequest) returns (ProductsReply);
  rpc GetProductsMinimumPrice (ProductsMinimumPriceRequest) returns (ProductsReply);
}

message ProductRequest {
  int32 product_id = 1;
}

message ProductsRequest {
}

message ProductsMinimumPriceRequest {
  decimal.DecimalValue minimum_price = 1;
}

message ProductReply {
  int32 product_id = 1;
  string product_name = 2;
  int32 supplier_id = 3;
  int32 category_id = 4;
  string quantity_per_unit = 5;
  decimal.DecimalValue unit_price = 6;
  int32 units_in_stock = 7;
  int32 units_on_order = 8;
  int32 reorder_level = 9;
  bool discontinued = 10;
}

message ProductsReply {
  repeated ProductReply products = 1;
}
